// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow renders with new posts 1`] = `
<li
  data-stylename="s.communityRow"
>
  <Link
    data-stylename="s.communityRowLink"
    replace={false}
    to="/c/undefined"
  >
    <div
      data-stylename="s.communityRowAvatar"
      style={
        Object {
          "backgroundImage": "url(https://d3ngex8q79bk55.cloudfront.net/misc/default_community_avatar.png)",
        }
      }
    />
    <span
      data-stylename="s.community-name s.is-member"
    />
  </Link>
</li>
`;

exports[`CommunityRow renders with zero new posts 1`] = `
<li
  data-stylename="s.communityRow"
>
  <Link
    data-stylename="s.communityRowLink"
    replace={false}
    to="/c/undefined"
  >
    <div
      data-stylename="s.communityRowAvatar"
      style={
        Object {
          "backgroundImage": "url(https://d3ngex8q79bk55.cloudfront.net/misc/default_community_avatar.png)",
        }
      }
    />
    <span
      data-stylename="s.community-name s.is-member"
    />
  </Link>
</li>
`;

exports[`Drawer renders a community list if networks are present 1`] = `
<div
  data-stylename="s.communityDrawer"
>
  <Icon
    data-stylename="s.closeDrawer"
    name="Ex"
  />
  <Logo />
  <Link
    data-stylename="s.settingsLink"
    replace={false}
    to="/settings"
  >
    <Icon
      data-stylename="s.settingsIcon"
      name="Settings"
    />
     Settings
  </Link>
  <ul
    data-stylename="s.communitiesList"
  >
    <li
      data-stylename="s.sectionTitle"
    >
      Networked Communities
    </li>
    <NetworkRow
      key="1"
      network={
        Object {
          "avatarUrl": "/wombat.png",
          "communities": Array [
            Object {
              "avatarUrl": "/foo.png",
              "id": "11",
              "name": "Foomunity",
              "newPostCount": 0,
              "slug": "foo",
            },
            Object {
              "avatarUrl": "/bar.png",
              "id": "22",
              "name": "Barmunity",
              "newPostCount": 7,
              "slug": "bar",
            },
          ],
          "id": "1",
          "name": "Wombat Network",
        }
      }
    />
    <li
      data-stylename="s.sectionTitle s.sectionTitleSeparator"
    >
      Independent Communities
    </li>
    <CommunityRow
      avatarUrl="/foo.png"
      id="11"
      key="11"
      name="Foomunity"
      newPostCount={0}
      slug="foo"
    />
    <CommunityRow
      avatarUrl="/bar.png"
      id="22"
      key="22"
      name="Barmunity"
      newPostCount={7}
      slug="bar"
    />
  </ul>
  <Button
    color="white"
    data-stylename="s.newCommunity"
    label="Start a Community"
  />
</div>
`;

exports[`Drawer renders with a current community 1`] = `
<div
  data-stylename="s.communityDrawer"
>
  <Icon
    data-stylename="s.closeDrawer"
    name="Ex"
  />
  <Logo
    community={
      Object {
        "avatarUrl": "/foo.png",
        "id": "11",
        "name": "Foomunity",
        "newPostCount": 0,
        "slug": "foo",
      }
    }
  />
  <Link
    data-stylename="s.settingsLink"
    replace={false}
    to="/settings"
  >
    <Icon
      data-stylename="s.settingsIcon"
      name="Settings"
    />
     Settings
  </Link>
  <Button
    color="white"
    data-stylename="s.newCommunity"
    label="Start a Community"
  />
</div>
`;

exports[`Drawer renders without a current community 1`] = `
<div
  data-stylename="s.communityDrawer"
>
  <Icon
    data-stylename="s.closeDrawer"
    name="Ex"
  />
  <Logo />
  <Link
    data-stylename="s.settingsLink"
    replace={false}
    to="/settings"
  >
    <Icon
      data-stylename="s.settingsIcon"
      name="Settings"
    />
     Settings
  </Link>
  <Button
    color="white"
    data-stylename="s.newCommunity"
    label="Start a Community"
  />
</div>
`;

exports[`NetworkRow is not expanded when post counts are 0 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      id={1}
      key="1"
      newPostCount={7}
    />
    <CommunityRow
      id={2}
      key="2"
      newPostCount={6}
    />
  </ul>
</li>
`;

exports[`NetworkRow matches last snapshot 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      id={1}
      key="1"
      newPostCount={7}
    />
    <CommunityRow
      id={2}
      key="2"
      newPostCount={6}
    />
  </ul>
</li>
`;

exports[`NetworkRow see all button calls preventDefault and sets the state 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      id={1}
      key="1"
      newPostCount={7}
    />
    <CommunityRow
      id={2}
      key="2"
      newPostCount={6}
    />
    <li
      data-stylename="s.seeAllBtn"
      onClick={[Function]}
    >
      See all
    </li>
  </ul>
</li>
`;

exports[`NetworkRow see all button shows "see all" button when there are non member communities 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      id={1}
      key="1"
      newPostCount={7}
    />
    <CommunityRow
      id={2}
      key="2"
      newPostCount={6}
    />
    <li
      data-stylename="s.seeAllBtn"
      onClick={[Function]}
    >
      See all
    </li>
  </ul>
</li>
`;
